--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="container">
 
       <div class="info">
-        <img src="Images/My_photo.jpg" alt="фото Максима" class="avatar"/>
+        <img src="My_photo.jpg" alt="фото Максима" class="avatar"/>
 
         <div class="info-text">
           <h1>Максим Евсеев</h1>
